--- a/project/index.html
+++ b/project/index.html
@@ -166,7 +166,14 @@
 <script src="js/controller/timelineCtrl.js"></script>
 
 <script src="js/controller/userAddCtrl.js"></script>
+<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+
 <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-messaging.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <script>
   // Initialize Firebase
   var config = {
@@ -177,6 +184,26 @@
     messagingSenderId: "36492923646"
   };
   firebase.initializeApp(config);
+  var provider = new firebase.auth.GoogleAuthProvider();
+
+
+
+  firebase.auth().signInWithPopup(provider).then(function(result) {
+  // This gives you a Google Access Token. You can use it to access the Google API.
+  var token = result.credential.accessToken;
+  // The signed-in user info.
+  var user = result.user;
+  // ...
+}).catch(function(error) {
+  // Handle Errors here.
+  var errorCode = error.code;
+  var errorMessage = error.message;
+  // The email of the user's account used.
+  var email = error.email;
+  // The firebase.auth.AuthCredential type that was used.
+  var credential = error.credential;
+  // ...
+});
 </script>
   </body>
 
