--- a/project/index.html
+++ b/project/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="36492923646-8li7blgf1ci4m3gsl55dalv2brh5h253.apps.googleusercontent.com">
 
     <title>SECURITY HOME KEY</title>
 
@@ -28,99 +29,125 @@
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   </head>
 
-  <body class="nav-md" ng-app="app">
-    <div class="container body">
-      <div class="main_container">
-        <div class="col-md-3 left_col">
-          <div class="left_col scroll-view">
-            <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-home"></i> <span>Security Home</span></a>
-            </div>
-
-            <div class="clearfix"></div>
-
-            <!-- menu profile quick info -->
-            <div class="profile">
-              <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+  <body class="nav-md" ng-app="app" >
+    <div id="mainController" id="indexController" ng-controller="indexController">
+      <div  class="container body">
+        <div class="main_container">
+        <div id="indexController" >
+          <div class="col-md-3 left_col">
+            <div class="left_col scroll-view">
+              <div class="navbar nav_title" style="border: 0;">
+                <a href="index.html" class="site_title"><i class="fa fa-home"></i> <span>Security Home</span></a>
               </div>
-              <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+
+              <div class="clearfix"></div>
+
+              <!-- menu profile quick info -->
+              <div class="profile">
+                <div class="profile_pic">
+                  <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                </div>
+                <div class="profile_info">
+                  <span>Welcome,</span>
+                  <h2 ng-model=user>{{ user }} </h2>
+                </div>
               </div>
+              <!-- /menu profile quick info -->
+
+
+              <!-- sidebar menu -->
+              <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+                <div class="menu_section">
+                  <h3>General</h3>
+                  <ul class="nav side-menu">
+                    <li><a href="#timeline"><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+
+                    </li>
+                    <li><a><i class="fa fa-edit"></i> Users <span class="fa fa-chevron-down"></span></a>
+                      <ul class="nav child_menu">
+                        <li><a href="#userAdd">Add user</a></li>
+
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!-- /sidebar menu -->
+
+
+              <!-- /menu footer buttons -->
             </div>
-            <!-- /menu profile quick info -->
+          </div>
 
+          <!-- top navigation -->
+          <div class="top_nav">
+            <div class="nav_menu">
+              <nav>
+                <div class="nav toggle">
+                  <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+                </div>
 
-            <!-- sidebar menu -->
-            <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-              <div class="menu_section">
-                <h3>General</h3>
-                <ul class="nav side-menu">
-                  <li><a href="#timeline"><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="">
+                    <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                      <img src="images/img.jpg" alt=""><span ng-model="user"></span>
+                      <span class=" fa fa-angle-down"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-usermenu pull-right">
 
-                  </li>
-                  <li><a><i class="fa fa-edit"></i> Users <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="#userAdd">Add user</a></li>
-
+                      <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                     </ul>
                   </li>
+
+
                 </ul>
-              </div>
+              </nav>
             </div>
-            <!-- /sidebar menu -->
-
-
-            <!-- /menu footer buttons -->
           </div>
         </div>
+          <!-- /top navigation -->
 
-        <!-- top navigation -->
-        <div class="top_nav">
-          <div class="nav_menu">
-            <nav>
-              <div class="nav toggle">
-                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-              </div>
-
-              <ul class="nav navbar-nav navbar-right">
-                <li class="">
-                  <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">John Doe
-                    <span class=" fa fa-angle-down"></span>
-                  </a>
-                  <ul class="dropdown-menu dropdown-usermenu pull-right">
-
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
-                  </ul>
-                </li>
-
-
-              </ul>
-            </nav>
+          <!-- page content -->
+          <div class="right_col" role="main" >
+            <div ng-view></div>
           </div>
-        </div>
-        <!-- /top navigation -->
+          <!-- /page content -->
 
-        <!-- page content -->
-        <div class="right_col" role="main" >
-          <div ng-view></div>
-        </div>
-        <!-- /page content -->
+          <!-- footer content -->
+          <footer>
+            <div class="pull-right">
+              Security Home Key
+            </div>
+            <div class="clearfix"></div>
+          </footer>
+          <!-- /footer content -->
+      </div>
+      </div>
 
-        <!-- footer content -->
-        <footer>
-          <div class="pull-right">
-            Security Home Key
-          </div>
-          <div class="clearfix"></div>
-        </footer>
-        <!-- /footer content -->
-    </div>
-</div>
+
+
+
+  </div>
+  <dialog id="login">
+      <section class="login_content" id="loginController" ng-controller= "loginController">
+
+          <h1>Security Home Key</h1>
+
+          <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+          <!-- [END google_button] -->
+          <br>
+          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="signout" name="signout">Sign Out</button>
+
+
+      </section>
+
+</dialog>
+
 <!-- jQuery -->
 <script src="../vendors/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap -->
@@ -161,12 +188,14 @@
 
 <!-- Custom Theme Scripts -->
 <script src="../build/js/custom.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+ <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/controller/timelineCtrl.js"></script>
-
+<script src="js/controller/login.js"></script>
 <script src="js/controller/userAddCtrl.js"></script>
-<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+<script src="js/controller/indexCtrl.js"></script>
+<script src="js/factory/userFactory.js"></script>
+
 
 <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
@@ -174,37 +203,14 @@
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-messaging.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyB8ftnD0MC-GVmOg_MCckisu_6hsJDsOU0",
-    authDomain: "securityhomekey.firebaseapp.com",
-    databaseURL: "https://securityhomekey.firebaseio.com",
-    storageBucket: "securityhomekey.appspot.com",
-    messagingSenderId: "36492923646"
-  };
-  firebase.initializeApp(config);
-  var provider = new firebase.auth.GoogleAuthProvider();
+<!-- Material Design Theming -->
+<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
 
 
-  firebase.auth().signInWithPopup(provider).then(function(result) {
-  // This gives you a Google Access Token. You can use it to access the Google API.
-  var token = result.credential.accessToken;
-  // The signed-in user info.
-  var user = result.user;
-  // ...
-}).catch(function(error) {
-  // Handle Errors here.
-  var errorCode = error.code;
-  var errorMessage = error.message;
-  // The email of the user's account used.
-  var email = error.email;
-  // The firebase.auth.AuthCredential type that was used.
-  var credential = error.credential;
-  // ...
-});
-</script>
+
+
+
   </body>
 
 </html>
