sms is successful

--- a/project/index.html
+++ b/project/index.html
@@ -50,16 +50,16 @@
               <!-- menu profile quick info -->
               <div class="profile">
                 <div class="profile_pic">
-                  <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                  <img src="{{ urlImage }}" alt="..." class="img-circle profile_img">
                 </div>
                 <div class="profile_info">
                   <span>Welcome,</span>
-                  <h2 ><span contenteditable="true" ng-bind="user"></span> </h2>
                 </div>
+
               </div>
               <!-- /menu profile quick info -->
 
-
+              <span contenteditable="true" ng-bind="user"></span>
               <!-- sidebar menu -->
               <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                 <div class="menu_section">
@@ -95,7 +95,7 @@
                 <ul class="nav navbar-nav navbar-right">
                   <li class="">
                     <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                      <img src="images/img.jpg" alt=""><span contenteditable="true" ng-bind="user"></span> 
+                      <img src="{{ urlImage }}" alt=""><span contenteditable="true" ng-bind="user"></span>
                       <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu pull-right">
