--- a/project/index.html
+++ b/project/index.html
@@ -48,7 +48,7 @@
               <div class="clearfix"></div>
 
               <!-- menu profile quick info -->
-              <div class="profile">
+              <div class="profile" ng-show="login">
                 <div class="profile_pic">
                   <img src="{{ urlImage }}" alt="..." class="img-circle profile_img">
                 </div>
@@ -95,7 +95,7 @@
                 <ul class="nav navbar-nav navbar-right">
                   <li class="">
                     <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                      <img src="{{ urlImage }}" alt=""><span contenteditable="true" ng-bind="user"></span>
+                      <img src="{{ urlImage }}" alt="" ng-show="login"><span ng-bind="user"></span>
                       <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -141,7 +141,7 @@
           <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
           <!-- [END google_button] -->
           <br>
-          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="signout" name="signout">Sign Out</button>
+          <!--<button disabled class="mdl-button mdl-js-button mdl-button--raised" id="signout" name="signout">Sign Out</button>-->
 
 
       </section>
