--- a/project/index.html
+++ b/project/index.html
@@ -206,6 +206,12 @@
 <!-- Material Design Theming -->
 <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
+<!-- Firebase -->
+<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+
+<!-- AngularFire -->
+<script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
+
 
 
 
