add filter face

--- a/project/timeline.html
+++ b/project/timeline.html
@@ -4,20 +4,32 @@
 <h1 id="timeline">{{ message }}</h1>
 </div>
 <ul class="timeline">
-  <li ng-repeat="obj in accesses">
-  <div class="timeline-badge success"><i class="glyphicon glyphicon-check"></i></div>
-  <div class="timeline-panel">
-    <div class="timeline-heading">
-      <h4 class="timeline-title" </h4>
-      <p><i class="glyphicon glyphicon-time"></i>{{ obj.date }}</p>
+
+  <li ng-repeat="access in accesses">
+    <div ng-show="access.face" class="timeline-badge success">
+      <i class="glyphicon glyphicon-check" ></i>
     </div>
 
-  </div>
+    <div ng-hide="access.face" class="timeline-badge warning">
+      <i class="glyphicon glyphicon-check"></i>
+    </div>
+
+
+
+    <div class="timeline-panel">
+      <div class="timeline-heading">
+        <h4 class="timeline-title" </h4>
+        <p><i class="glyphicon glyphicon-time"></i>{{ access.date }}</p>
+      </div>
+
+    </div>
   </li>
 
+</ul>
 <!--
   <li class="timeline-inverted">
-  <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+  <div ng-if="obj.face =='false' and obj.nfc == 'false'" class="timeline-badge warning"><i class="glyphicon glyphicon-check"></i></div>
+
   <div class="timeline-panel">
     <div class="timeline-heading">
       <h4 class="timeline-title">Mussum ipsum cacilds</h4>
@@ -56,5 +68,5 @@
 </li>-->
 
 
-</ul>
+
 </div>
