--- a/project/timeline.html
+++ b/project/timeline.html
@@ -18,7 +18,7 @@
 
     <div class="timeline-panel">
       <div class="timeline-heading">
-        <h4 class="timeline-title" </h4>
+        <h4 class="timeline-title" </h4>{{ access.user }}
         <p><i class="glyphicon glyphicon-time"></i>{{ access.date }}</p>
       </div>
 
