--- a/project/user.html
+++ b/project/user.html
@@ -1,6 +1,42 @@
 
 <div>
-  <h1>About Page</h1>
-  {{ message }}
-	<p>prueba</p>
+  <h1>List Users</h1>
+  <div class="x_content">
+
+    <table id="datatable" class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Rol</th>
+          <th>Auth</th>
+        </tr>
+      </thead>
+
+
+      <tbody ng-repeat="user in users">
+        <tr>
+          <td>{{ user.name }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.role }}</td>
+          <td>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" class="flat" checked="!checked"> 
+              </label>
+            </div>
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+  </div>
+
+  <script>
+  $(document).ready(function() {
+
+    $('#datatable').dataTable();
+
+  });
+</script></script>
 </div>
