--- a/project/index.html
+++ b/project/index.html
@@ -70,7 +70,7 @@
                     </li>
                     <li><a><i class="fa fa-edit"></i> Users <span class="fa fa-chevron-down"></span></a>
                       <ul class="nav child_menu">
-                        <li><a href="#userAdd">Add user</a></li>
+                        <li><a href="#userAdd">List user</a></li>
 
                       </ul>
                     </li>
