--- a/project/timeline.html
+++ b/project/timeline.html
@@ -11,11 +11,11 @@
     </div>
 
     <div ng-show="access.nfc==0" class="timeline-badge danger">
-      <i class="glyphicon glyphicon-check"></i>
+      <i class="glyphicon  glyphicon-remove"></i>
     </div>
 
     <div ng-show="access.face==0 && access.nfc==1" class="timeline-badge warning">
-      <i class="glyphicon glyphicon-check"></i>
+      <i class="glyphicon glyphicon-exclamation-sign"></i>
     </div>
 
 
